# bookstoremp

./: .dockerignore  Dockerfile  README.md  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml  docker.yml
api/: wsgi.py
bookstore/: models.py  serializers.py  settings.py  tests.py  views.py  wsgi.py
bookstore/migrations/: 0001_initial.py  0002_alter_book_author_alter_book_description_and_more.py  0003_order.py
bookstoremp/: asgi.py  settings.py  urls.py  views.py  wsgi.py
bookstoremp/templates/: home.html  product_detail.html
